# EigenChineseDocument

./: README.md
Eigen/: CMakeLists.txt  chapter1_test.cpp  chapter2_test.cpp  chapter3_test.cpp  chapter4_test.cpp
Eigen/Chapter1_DenseMatrixAndArrary/: HeaderFile.h  Section10_StorageOrders.hpp  Section11_AlignmentIssues.hpp  Section1_MatrixClass.hpp  Section2_MatrixAndVectorArithmetic.hpp  Section3_ArrayAndCoefficientwiseOperations.hpp  Section4_BlockOperations.hpp  Section5_AdvancedInitialization.hpp  Section6_ReductionsVisitorsBroadcasting.hpp  Section7_MapClass.hpp  Section8_ReshapeAndSlicing.hpp  Section9_Aliasing.hpp
Eigen/Chapter2_DenseLinearProblemsAndDecompositions/: HeaderFile.h  Section1_LinearAlgebraAndDecompositions.hpp  Section2_CatalogueOfDenseDecompositions.hpp  Section3_SolvingLinearLeastSquaresSystems.hpp  Section4_InplaceDecompisitions.hpp  Section5_BenchmarkOfDenseDecompositions.hpp
Eigen/Chapter3_SparseLinearAlgebra/: HeaderFile.h  HelpFunctions.hpp  Section1_SparseMatrixManipulations.hpp  Section2_SolveSparseLinearSystems.hpp  Section3_MatrixFreeSolvers.hpp
Eigen/Chapter4_Geometry/: Section1_SpaceTransformations.hpp
